# funcnodes_repositories

./: .gitignore  README.md  README_template.md  available_repositories.yaml  funcnodes_modules.csv  pyproject.toml  update_available.py
scripts/: blacklist.txt  official.txt  update.py  whitelist.txt
