[project]
name = "funcnodes-repositories"
version = "0.1.0"
description = ""
authors = [
    {name = "Julian Kimmig", email = "julian.kimmig@gmx.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.67.1",
    "packaging>=24.2",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "beautifulsoup4>=4.12.3",
]
